--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.1",
