--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.18",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
