--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-ga4": "^2.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.1",
