--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sitemap": "node src/sitemap.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -30,6 +31,7 @@
     "react-helmet-async": "^2.0.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "sitemap": "^7.1.1",
     "styled-components": "^6.1.1",
     "yup": "^1.3.2"
   },
